--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ POSTGRES_DB=mydatabase
 
 # SQLAlchemy/Alembic connection string (Docker network: host=db)
 DATABASE_URL=postgresql+psycopg://user:password@db:5432/mydatabase
+JWT_SECRET_KEY=your_secret_key
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_DELTA_SECONDS=3600
+JWT_ISSUER=finance_api
+JWT_AUDIENCE=finance_api_users
+JWT_REFRESH_EXPIRATION_SECONDS=1209600
+JWT_REFRESH_ROTATE=1
