--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "api"
-version = "0.2.0"
+version = "0.3.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi[standard]>=0.128.0",
     "passlib[argon2]>=1.7.4",
     "psycopg[binary]>=3.3.2",
+    "pyjwt>=2.11.0",
     "pytest>=9.0.2",
     "sqlalchemy>=2.0.46",
     "uvicorn>=0.40.0",
